<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg0"
    android:orientation="vertical"
    tools:context=".ShoppingCart">

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:id="@+id/cartTitle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:fontFamily="@font/ggastino"
        android:gravity="center|center_horizontal"
        android:text="@string/cartTitle"
        android:textColor="#E11C1C"
        android:textSize="48sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/questionView"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:fontFamily="sans-serif"
        android:gravity="center|center_horizontal"
        android:text="@string/header"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/cartBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartBtn1"
                android:textColor="#2962FF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/cartBtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartBtn2"
                android:textColor="#2962FF"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/cartBtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cartBtn3"
                android:textColor="#2962FF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="14dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="#80FFFFFF"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/defColorBtn"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/heycomic"
                android:text="@string/defaultColort" />

            <Button
                android:id="@+id/blueColorBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/heycomic"
                android:text="@string/carColorBlue" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imgCart"
        android:layout_width="382dp"
        android:layout_height="274dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#D9304BED"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp">

        <ImageView
            android:id="@+id/cartImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/car" />
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <Button
        android:id="@+id/proceedBtn"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/proceedBtn"
        android:textSize="16sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="11dp" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/backBtn"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>