<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/carsey_App"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg0"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Buy"
                android:contextClickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/buybtn" />

            <TextView
                android:id="@+id/appTitle"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/ggastino"
                android:gravity="center"
                android:text="@string/appTitle"
                android:textColor="#0E2FEA"
                android:textSize="34sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageCardView"
        android:layout_width="382dp"
        android:layout_height="274dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#D9304BED"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/mainImgView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/car" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="21dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/descView"
        android:layout_width="401dp"
        android:layout_height="172dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#D9FBFBFB"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="11dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/modelNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/heycomic"
                    android:gravity="center"
                    android:text="@string/modelName"
                    android:textColor="#E80F0F"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/modelDescTxt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/carPriceTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/heycomic"
                    android:gravity="center"
                    android:text="@string/carPrice"
                    android:textColor="#F30F0F"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/priceDescTxt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/engineTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/heycomic"
                    android:gravity="center"
                    android:text="@string/engineName"
                    android:textColor="#EC0A0A"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/engineDescTxt"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/transTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/heycomic"
                    android:gravity="center"
                    android:text="@string/transmissionType"
                    android:textColor="#F30F0F"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/transTypeDescTxt"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/car1Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carName1"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car2Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/carName2"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car3Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/carName3"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car4Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/carName4"
            android:textColor="#FBFBFB"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/car5Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carName5"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car6Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carName6"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car7Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carName7"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/car8Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/carName8"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/bg1ChckX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/background1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/bg2ChckX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/background2"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/bg3ChckX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/background3"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

</LinearLayout>