<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    android:orientation="vertical"
    tools:context=".Pricelist">

    <androidx.cardview.widget.CardView
        android:id="@+id/carPriceView"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/mainMenuBtn6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="Buy"
                android:contextClickable="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/backbtn" />

            <TextView
                android:id="@+id/appTitle6"
                android:layout_width="132dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/ggastino"
                android:gravity="center"
                android:text="@string/appTitle"
                android:textColor="#FF6D00"
                android:textSize="34sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="15dp" >

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:iconifiedByDefault="false"
            android:queryHint="@string/searchHint" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="229dp"
        app:cardBackgroundColor="#D9FFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="270dp">

            <EditText
                android:id="@+id/carItemName"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:ems="10"
                android:hint="@string/carNameHint"
                android:inputType="textPersonName|text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/carItemPrice"
                android:layout_width="370dp"
                android:layout_height="55dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:hint="@string/carPriceHint"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/carItemName"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/carItemName"
                app:layout_constraintTop_toBottomOf="@+id/carItemName" />

            <ImageButton
                android:id="@+id/saveBtn"
                android:layout_width="72dp"
                android:layout_height="58dp"
                android:layout_marginTop="12dp"
                android:contentDescription="save"
                android:contextClickable="true"
                android:elevation="25dp"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/carItemPrice"
                app:srcCompat="@drawable/savepic" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="29dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>